[package]
name = "arduinoxide"
version = "0.1.0"
authors = ["Aaron Deadman <aaron@introspection.net.au>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduinoxide"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
ufmt_float = "0.2.0"
ringbuffer = { version = "0.14.2", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d5beacbc191587003b9af43e7b6b1c28906c7e05"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.1"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

# Disable overflow checks for compiler-builtins to allow debug releases to build
[profile.dev.package.compiler_builtins]
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
